# random-quote-generator

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/docker/: dev.Dockerfile
backend/scripts/: runserver.sh
backend/src/: manage.py  pytest.ini
backend/src/contrib/: admin_mixins.py  constants.py  models.py  views.py
backend/src/contrib/api/: clients.py
backend/src/contrib/tests/: assertions.py
backend/src/quotes/: admin.py  enums.py  models.py  serializers.py  views.py
backend/src/quotes/api/: clients.py  models.py  registry.py
backend/src/quotes/fixtures/: quotes.json
backend/src/quotes/management/commands/: add_missing_images.py  pre_populate_db.py
backend/src/quotes/migrations/: 0001_initial.py  0002_alter_quoteorigin_options.py
backend/src/quotes/tests/: factories.py  test_quotes_models.py  test_quotes_views.py
backend/src/quotes/utils/: db_operations.py  quote_fetching.py
backend/src/rqg/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/docker/: dev.Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: theme-provider.tsx
frontend/src/components/ui/: background-gradient.tsx  mode-toggle.tsx
